--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_SSO_CLIENT_ID=kprint-frontend
 VITE_SSO_AUTHORITY=https://sso.csh.rit.edu/auth/realms/csh
 VITE_SSO_ENABLED=true
+VITE_API_PREFIX=http://localhost:8080/
 HTTPS=false
 PORT=8081
